# MWC

./: .gitignore  README.md
MWC/: CMakeLists.txt
MWC/data/: votes.json
MWC/src/: functions.h  main.cpp
